<resources>
    <string name="app_name">Homework</string>
    <string name="description">Описание</string>
    <string name="detail">Детальнее</string>
    <string name="back">Назад</string>

    <string name="main_text">Git is easy to learn and has a tiny foot-
        print with lightning fast performance. It
        outclasses SCM tools like Subversion,
        CVS, Perforce, and ClearCase with
        features …</string>

    <string name="details_text">Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</string>
    <string name="details_text_2">Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows.</string>
</resources>